--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "devDependencies": {
     "bs-platform": "^7.0.1",
-    "concurrently": "^5.1.0",
-    "moduleserve": "^0.9.0"
+    "concurrently": "^5.1.0"
   }
 }
