--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "css-loader": "^3.4.2",
     "postcss-import": "^12.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "reason-react": ">=0.7.0"
+    "reason-react": ">=0.7.0",
+    "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
     "bs-platform": "^7.0.1",
