--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start:bsb": "bsb -clean-world -make-world -w",
     "start:webpack": "webpack-dev-server --port 3000",
     "build": "concurrently -k \"yarn run build:webpack\"",
-    "build:webpack": "NODE_ENV=production webpack",
+    "build:webpack": "cross-env NODE_ENV=production webpack",
     "format": "refmt src/*.re"
   },
   "keywords": [
@@ -25,8 +25,10 @@
     "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.1.0",
     "bs-platform": "^7.0.1",
     "concurrently": "^5.1.0",
+    "cross-env": "^7.0.2",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
