--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start:webpack": "webpack-dev-server --port 3000",
     "build": "concurrently -k \"yarn run build:webpack\"",
     "build:webpack": "cross-env NODE_ENV=production webpack",
+    "pretest": "yarn run build",
+    "test": "jest",
+    "watch:test": "jest --coverage --watchAll",
     "format": "refmt src/*.re"
   },
   "keywords": [
@@ -26,7 +29,9 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@glennsl/bs-jest": "^0.5.0",
     "bs-platform": "^7.0.1",
+    "bs-react-testing-library": "^0.6.0",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.2",
     "html-webpack-plugin": "^3.2.0",
