Editing rows done

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,5 +1,5 @@
 {
-  "name": "reason-react-examples",
+  "name": "social-dm-tools",
   "reason": {
     "react-jsx": 3
   },
@@ -24,6 +24,7 @@
   "namespace": true,
   "bs-dependencies": [
     "reason-react",
+    "bs-webapi",
     "bs-react-testing-library",
     "@glennsl/bs-jest"
   ],
