--- a/package.json
+++ b/package.json
@@ -1,45 +1,11 @@
 {
   "name": "social-dm-tools",
-  "version": "0.1.0",
-  "scripts": {
-    "start": "concurrently -k \"yarn run start:bsb\" \"yarn run start:webpack\"",
-    "start:bsb": "bsb -clean-world -make-world -w",
-    "start:webpack": "webpack-dev-server --port 3000",
-    "build": "concurrently -k \"yarn run build:webpack\"",
-    "build:webpack": "cross-env NODE_ENV=production webpack",
-    "pretest": "yarn run build",
-    "test": "jest",
-    "watch:test": "jest --watchAll",
-    "format": "refmt src/*.re"
-  },
-  "keywords": [
-    "BuckleScript",
-    "ReasonReact",
-    "reason-react"
-  ],
-  "author": "",
+  "version": "1.0.0",
+  "repository": "git@github.com:bdunn313/social-dm-tools.git",
+  "author": "Brad Dunn <brad@braddunn.com>",
   "license": "MIT",
-  "dependencies": {
-    "css-loader": "^3.4.2",
-    "postcss-import": "^12.0.1",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "reason-react": ">=0.7.0",
-    "tailwindcss": "^1.2.0"
-  },
-  "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.1.0",
-    "@glennsl/bs-jest": "^0.5.0",
-    "bs-platform": "^7.0.1",
-    "bs-react-testing-library": "^0.6.0",
-    "concurrently": "^5.1.0",
-    "cross-env": "^7.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "postcss-loader": "^3.0.0",
-    "style-loader": "^1.1.3",
-    "url-loader": "^4.0.0",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
-  }
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ]
 }
