--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
   "private": true,
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "scripts": {
+    "start": "wsrun start"
+  },
+  "devDependencies": {
+    "wsrun": "^5.2.0"
+  }
 }
