--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,7 +10,8 @@
     "pretest": "yarn run build",
     "test": "jest",
     "watch:test": "jest --watchAll",
-    "format": "refmt src/*.re"
+    "format": "refmt src/*.re",
+    "build:schema": "yarn get-graphql-schema http://localhost:9999 -j > ../graphql_schema.json"
   },
   "keywords": [
     "BuckleScript",
@@ -24,16 +25,19 @@
     "postcss-import": "^12.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "reason-apollo": "^0.19.0",
     "reason-react": ">=0.7.0",
     "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
+    "@baransu/graphql_ppx_re": "^0.7.1",
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@glennsl/bs-jest": "^0.5.0",
     "bs-platform": "^7.0.1",
     "bs-react-testing-library": "^0.6.0",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.2",
+    "get-graphql-schema": "^2.1.2",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
