--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "wsrun start"
+    "start": "wsrun start",
+    "postinstall": "patch-package"
   },
   "devDependencies": {
     "wsrun": "^5.2.0"
