--- a/packages/web/bsconfig.json
+++ b/packages/web/bsconfig.json
@@ -24,6 +24,7 @@
   "namespace": true,
   "bs-dependencies": [
     "reason-react",
+    "reason-apollo-hooks",
     "reason-apollo",
     "bs-react-testing-library",
     "@glennsl/bs-jest"
