--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,11 +21,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "css-loader": "^3.4.2",
     "postcss-import": "^12.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "reason-apollo": "^0.19.0",
+    "reason-apollo-hooks": "^6.0.0",
     "reason-react": ">=0.7.0",
     "tailwindcss": "^1.2.0"
   },
@@ -39,7 +41,9 @@
     "cross-env": "^7.0.2",
     "get-graphql-schema": "^2.1.2",
     "html-webpack-plugin": "^3.2.0",
+    "patch-package": "^6.2.1",
     "postcss-loader": "^3.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "style-loader": "^1.1.3",
     "url-loader": "^4.0.0",
     "webpack": "^4.42.0",
