Prevent blank items from being added, or updated to be blank

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "start": "wsrun start",
+    "start:bsb": "yarn workspace @social-dm-tools/web run start:bsb",
     "postinstall": "patch-package"
   },
   "devDependencies": {
